--- a/.gitignore
+++ b/.gitignore
@@ -1,115 +1,1 @@
-target/*
-target/debug/rust_web_test_bin.exe
-target/debug/rust_web_test_bin.pdb
-target/debug/deps/librust_web_test.rlib
-target/debug/deps/rust_web_test_bin.d
-target/debug/deps/rust_web_test_bin.exe
-target/debug/deps/rust_web_test_bin.pdb
-target/debug/deps/rust_web_test.d
-target/debug/deps/rust_web_test.dll
-target/debug/deps/rust_web_test.dll.exp
-target/debug/deps/rust_web_test.pdb
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v.lock
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1a5tljw6gif2gl85.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1c661vv3h0ifv7o7.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1dd4qijd3o4eau4i.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1hpmtdgku23mrnx3.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1jf8jhnqrjrmeynj.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1ok0bjbpks0bo0yk.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1sd6qpep6y83w0p7.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1vehw6mp67hilmag.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/1wkjf0x9vrzw94rn.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2bcri8r3kfsqmxy8.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2c94rp973szwore8.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2eazhgwi2og0mn4i.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2h9f1ppgvjy1ay6d.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2iquewm532lif297.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2j34qz1azmwc8nie.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2l1a25f50byftjgp.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2n3y9a8mrhf4etuj.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2tk6rvdszo37qkk1.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2u3o5n16gww0h53o.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2v11401gkkf3xq6r.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2x621ag8stn819tu.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/2xstlayjaok66wg0.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3ah0vwxbdlybn8nh.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3f3ujlddkwoccifb.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3gzgsgn36ep5qmae.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3jjbrvytkq7cvus2.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3ligyu9okp01qpop.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3mhef8ycrpp7hegd.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3n6zaezesvakyfd2.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3nr9w1t5b5e18xn1.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3oab6sg2utjx8i0m.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3u1df33ybdmza88f.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3vg0217fgegxvwzo.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/3vtdqhmg7o0099kw.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4dtlh48lesv8lpmi.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4j4qgat58lsu1ref.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4jrfipirxaxbahy5.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4kxk1xxpau2frtjw.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4lkyxflqqkmrk0st.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4lyhvbdwa745pxih.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4oj2m0vj8iebj5ht.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4ok4n3te6tjuoi75.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4orb3r4wg3wdeadx.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4qh2sdtwmvarkdd5.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4ro13kw1pgo2uu02.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/4vt2k8mk1fb72z7c.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/5eouq5k69uw6cjht.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/5f8zs0ijce0gp4q6.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/5gbi0jzcuj4mxnu6.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/5gp63m00rt31u2qi.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/5xvebu32raudifg.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/10bh1vp5ees1050b.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/15hkpqnkev42oc1s.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/15u82ni0vhyrnn8t.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/20gggtz966moyi8h.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/22w7twx1i9yrlwbj.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/25hhbbba12s7pv42.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/32fh62cu82fdg4uv.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/34rvlcgg58jueum.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/36m9ii5l2auybcq2.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/39l0xx1egju8m6u4.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/39sorfa4g60euezr.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/42vusi5dh0p6bhq2.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/50uwozp76lpo2tvp.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/51yvx5qgbt68vca5.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/56d3rqrftc6bt4tk.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/56z8voy7l46r3cx6.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/58nt2zzujhcf6lp2.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/259xbmc6x2qdrvqv.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/280esoj3ukze2jjz.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/315gloo3laey0cmm.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/595y369qi6lrlcep.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/24495nor3npz961.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/24920hpo4qnc38kh.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/254309rluma1f09b.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/b998rc7tgdqcaw4.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/dep-graph.bin
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/f116vgumcs6wsnk.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/jgayodgqi7wzlg2.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/jojkkxoixddprly.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/mizwru1o5afkokd.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/my425do54noghem.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/pt4ry5j81p4hlav.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/query-cache.bin
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/qzfotx5gzcmwsg1.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/sg5o9b4ixff90oo.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/sh87mgl5dgvpkje.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/spszk64gh21frpj.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/udaxrtyhzhq1vhu.o
-target/debug/incremental/rust_web_test-149vzu44dd0nc/s-gctra792sc-6lnv9v-sg8q0u9dkvnc/work-products.bin
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r.lock
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/1k22sshnkdthnjo3.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/1qgbhbzjf7y47l38.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/2g4mnf9obun4snnh.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/3bbkw2k5cqnk8eq.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/3fw3r9zhhav3o5c7.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/4gqr6cq9g59telgr.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/196dhr2v3qv895ar.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/4540wqfdfm7arzm9.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/dep-graph.bin
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/orospgdo9ti8iej.o
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/query-cache.bin
-target/debug/incremental/rust_web_test_bin-j20h4j1ours4/s-gctra7trlj-1ygbf4r-3hhmqq8jszytb/work-products.bin
+/target/
